# python-parallel

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/parallel/: parallel.py  parallel.pyi  parallel_executor.py  return_when.py
src/tests/: example1.py  example2.py  test_parallel.py  test_parallel_executor.py
