[project]
name = "parallel"
version = "1.0.0"
description = "Call python functions in parallel using threads."
authors = [
    { name = "Thomas Schaap", email = "cybermonktitan@gmail.com" }
]
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
lint = ["mypy", "ruff"]
test = ["coverage", "pytest"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.coverage.report]
exclude_also = [
    "if sys\\.version_info [<>=]",
    "pytest.fail\\(",
]
